  * auto-pkg-test.rst: Updated links for raring.
  * Add a work-around for the blank pages in PDF bug (LP: #1095513).
  * Disable useless index in PDFs.
  * Fix broken font in russian PDFs (LP: #1121795):
    - Add a build-dependency on cm-super-minimal.
    - Disable times package when language is russian.
  * Update README and add some information for translators.

  [ Daniel Holbach ]
  * Document where to find a list of required autopkgtests and where 
    to get help.
  * Enable Russian translations. Add texlive-lang-cyrillic to debian/control
    as Build-Depends.
  * Bump Standards-Version. No changes.

  [ Andrew Starr-Bochicchio ]
  * Put license information into the page footer (LP: #1093447).
  * Add logo and fix title on the pdf cover page.

  [ Dražen Lučanin ]
  * getting-set-up.rst: link to Enigmail for Thunderbird GPG support.

  [ Jean-Baptiste Lallement ]
  * auto-pkg-test.rst: updated for raring and new run-adt-test syntax.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Sat, 09 Feb 2013 10:53:16 +0100

ubuntu-packaging-guide (0.3.0) experimental; urgency=low

  [ Daniel Holbach ]
  * Added some additional information to the autopkgtest article.
  * Updated autopkgtest article to current tools. (LP: #1080805)
  * Enable Spanish translations. (LP: #1068493)

  [ Andrew Starr-Bochicchio ]
  * debian/scripts/add-languages:
   - Modify LANGS variable in Makefile when a language reaches
     threshold (LP: #1067288).
   - Clean up to make PEP8 compliant.
  * Drop udd-patchsys article. The patches-to-packages article
    is the recommended workflow (LP: #973884).
  * debian/control: Add myself to Uploaders and remove
    Benjamin Drung. Thanks for his previous work.
  
  [ Dmitry Shachnev ]
  * Fix search not working (LP: #814679).
  * Introduce -common package (LP: #1067338).
  * Better resources linking.
  * Remove unnecessary build-dependencies.
  * Add CSS styling for code blocks and search results page.