@@ -1,0 +1,27 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<link rel="stylesheet" type="text/css" href="translators.css">
+<title>Ubuntu Packaging Guide translators</title>
+</head>
+<body>
+<table class="page-areas">
+<tr class="area-toppanel">
+<td>
+<div class="toppanel">
+<a href="http://developer.ubuntu.com/" class="dev-link">
+<img src="images/logo-ubuntu.png" alt="Ubuntu logo">
+developer
+</a>
+</div>
+</td>
+</tr>
+<tr class="area-content"><td>
+<div class="content">
+%CONTENT%
+</div>
+</td></tr>
+</table>
+</body>
+</html>
