@@ -206,6 +206,9 @@
         src="{{ pathto('_static/images/cc-by-sa.png', 1) }}" /></a>
       {%- endif %}
     {%- endif %}
+    <br />
+    <a href="http://people.ubuntu.com/~mitya57/ubuntu-packaging-guide-readme.html#translating">Help translate</a> or
+    <a href="{{ pathto('_static/translators.html', 1) }}">view the list of translators</a>.
 
   </div>
 </footer>
